##Text encoding: utf-8

2016-03-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: fix reading of text with empty runs and avoid
	writing such weird objects. [see sr#108952 comments #25-27]

2016-03-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.14.12).

2016-02-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/*/*.desktop.in.in: add a comment for translators.
	* schemas/org.gnome.gchemutils.gschema.xml.in.in: fixed a key description.

2016-02-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/arrow.cc: enhance reaction import/export to CDX format.
	* libs/gcp/arrow.h: ditto.
	* libs/gcp/mesomer.cc: ditto.
	* libs/gcp/reactant.cc: ditto.
	* libs/gcp/reactant.h: ditto.
	* libs/gcp/reaction-arrow.cc: ditto.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/reaction-prop.cc: ditto.
	* libs/gcp/reaction-prop.h: ditto.
	* libs/gcu/object.h: fix documentation.
	* plugins/loaders/cdx/cdx.cc: enhance reaction import/export.

2016-02-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/arrow.h: typo.
	* libs/gcp/mesomer.cc: add a property to set/get the child molecule.
	* libs/gcp/mesomer.h: ditto.
	* libs/gcp/reaction-arrow.h: typo.
	* libs/gcp/reaction-operator.h: ditto..
	* libs/gcu/objprops.h: add new properties.
	* plugins/loaders/cdx/cdx.cc: fix mesomery loading.

2016-02-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: enhance reaction operator position on export.
	* programs/3d/gchem3d.desktop.in.in: add keywords.
	* programs/calc/gchemcalc.desktop.in.in: ditto.
	* programs/crystal/gcrystal.desktop.in.in: ditto.
	* programs/paint/gchempaint.desktop.in.in: ditto.
	* programs/spectra/gspectrum.desktop.in.in: ditto.
	* programs/table/gchemtable.desktop.in.in: ditto.

2016-02-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/brackets.cc: fix embedding of a whole molecule. [#47224]